--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Joaquim Ucolore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co"/>
+    <meta name="description" content="Ucolore's Website"/>
     <meta name="keywords"
-          content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"/>
-    <meta name="author" content="FreeHTML5.co"/>
+          content="Joaquim Ucolore, responsive, Website"/>
+    <meta name="author" content="Joaquim Ucolore"/>
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -21,8 +21,6 @@
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet"> -->
-
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Icomoon Icon Fonts-->
@@ -33,14 +31,9 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <!-- Magnific Popup -->
     <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- Owl Carousel  -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- Flexslider -->
-    <link rel="stylesheet" href="css/flexslider.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="css/style.css">
-
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
@@ -93,7 +86,7 @@
                                 <div class="header-content container">
                                     <h1 class="header-title">
                                         <span class="up text-nowrap">HELLO WORLD!</span>
-                                        <p class="header-subtitle">O Engenheiro de Software ideal para ti</p>
+                                        <p class="header-subtitle">O Engenheiro de Software ideal para si</p>
                                     </h1>
                                 </div>
                             </header>
@@ -112,11 +105,11 @@
                     <p class="sub">Engenheiro de Software apaixonado por tecnologia e inovação!</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-6 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
                     <div class="img-shadow">
-                        <img src="images/img_1.jpg" class="img-responsive"
-                             alt="Image Text">
+                        <img src="images/about-me.png" class="img-responsive"
+                             alt="About me">
                     </div>
                 </div>
                 <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
@@ -139,119 +132,97 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-                    <h1>Tecnologias</h1>
+                    <h1>Serviços Oferecidos</h1>
                     <p class="sub"></p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="gtco-practice-area-item animate-box">
-                        <div class="gtco-icon">
-                            <img src="images/scale.png" alt="Image Text">
-                        </div>
-                        <div class="gtco-copy">
-                            <h3>Criminal Law</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien.
-                                Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor
-                                leo eget erat. </p>
-                        </div>
+            <div class="row text-justify">
+                <div class="col-lg-3 col-md-6">
+                    <div class="feature_item">
+                        <img src="images/services/s1.png" alt="">
+                        <h4>Desenvolvimento de Softwares</h4>
+                        <p>Investir em um software é investir no crescimento contínuo do seu negócio.</p>
                     </div>
-
-                    <div class="gtco-practice-area-item animate-box">
-                        <div class="gtco-icon">
-                            <img src="images/scale.png" alt="Image Text">
-                        </div>
-                        <div class="gtco-copy">
-                            <h3>Industrial Law</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien.
-                                Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor
-                                leo eget erat. </p>
-                        </div>
-                    </div>
-
                 </div>
-                <div class="col-md-6">
-
-                    <div class="gtco-practice-area-item animate-box">
-                        <div class="gtco-icon">
-                            <img src="images/scale.png" alt="Image Text">
-                        </div>
-                        <div class="gtco-copy">
-                            <h3>Divorce Law</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien.
-                                Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor
-                                leo eget erat. </p>
-                        </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="feature_item">
+                        <img src="images/services/s2.png" alt="">
+                        <h4>Análise de Sistemas</h4>
+                        <p>Ofereço avaliação, aprimoramento e optimização dos seus sistemas.</p>
                     </div>
-
-                    <div class="gtco-practice-area-item animate-box">
-                        <div class="gtco-icon">
-                            <img src="images/scale.png" alt="Image Text">
-                        </div>
-                        <div class="gtco-copy">
-                            <h3>Corporate Law</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien.
-                                Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor
-                                leo eget erat. </p>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="feature_item">
+                        <img src="images/services/s3.png" alt="">
+                        <h4>Web Design</h4>
+                        <p>Dê visibilidade do seu negócio ao mundo, com soluções de páginas web intuitivas e inovadoras.</p>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="feature_item">
+                        <img src="images/services/s4.png" alt="">
+                        <h4>Consultoria</h4>
+                        <p>Juntos, podemos alcançar novos patamares e conquistar o sucesso no mercado.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="gtco-our-team" data-section="our-team" style="margin-top: 0; padding-top: 0">
+    <section id="gtco-our-team" class="portfolio_area" data-section="our-team" style="margin-top: 0; padding-top: 0">
         <div class="container" style="margin-top: 0; padding-top: 0">
-            <div class="row row-pb-md">
-                <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-                    <h1>Projectos</h1>
-                    <p class="sub"></p>
-                </div>
-            </div>
-            <div class="row team-item gtco-team-reverse">
-                <div class="col-md-6 col-md-push-7 animate-box" data-animate-effect="fadeInRight">
-                    <div class="img-shadow">
-                        <img src="images/img_team_1.jpg" class="img-responsive"
-                             alt="Projecto 1">
+<!--            <div class="row row-pb-md">-->
+<!--                <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">-->
+<!--                    <h1>Projectos</h1>-->
+<!--                    <p class="sub"></p>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="heading text-left">
+                        <h1>Projectos Recentes</h1>
+                        <p class="sub"></p>
                     </div>
                 </div>
-                <div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
-                    <h2>Jeff Finley</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores,
-                        voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi?
-                        Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit
-                        officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus
-                        reprehenderit, quae recusandae voluptatibus magnam!</p>
-                    <p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio,
-                        eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex
-                        necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem
-                        accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam,
-                        dolorum excepturi adipisci.</p>
-                </div>
             </div>
-
-            <div class="row team-item gtco-team">
-                <div class="col-md-6 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
-                    <div class="img-shadow">
-                        <img src="images/img_team_2.jpg" class="img-responsive"
-                             alt="Projecto 2">
+            <div class="filters-content">
+                <div class="row portfolio-grid justify-content-center">
+                    <div class="col-lg-4 col-md-6 all latest">
+                        <div class="portfolio_box">
+                            <div class="single_portfolio">
+                                <img class="img-fluid" src="images/portfolio/ebanking.jpg" alt="">
+                            </div>
+                            <div class="short_info">
+                                <h4>Software E-banking</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 all latest">
+                        <div class="portfolio_box">
+                            <div class="single_portfolio">
+                                <img class="img-fluid" src="images/portfolio/card.jpg" alt="">
+                            </div>
+                            <div class="short_info">
+                                <h4>Workflow de Clientes e Cartões</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 all popular">
+                        <div class="portfolio_box">
+                            <div class="single_portfolio">
+                                <img class="img-fluid" src="images/portfolio/ge.jpg" alt="">
+                            </div>
+                            <div class="short_info">
+                                <h4>Software de Gestão de Entidades e Infraestrutura</h4>
+                                <p></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                    <h2>Craig Campbell</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores,
-                        voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi?
-                        Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit
-                        officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus
-                        reprehenderit, quae recusandae voluptatibus magnam!</p>
-                    <p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio,
-                        eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex
-                        necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem
-                        accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam,
-                        dolorum excepturi adipisci.</p>
-                </div>
             </div>
-
         </div>
     </section>
 
