--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
 
     <section id="gtco-hero" class="gtco-cover"
-             style="background-image: url(images/header.jpg); background-size: cover !important;"
+             style="background-image: url(images/header.jpg); background-size: cover !important; height: 100vh;"
              data-section="home" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -86,12 +86,12 @@
                     <div class="display-t">
                         <div class="display-tc">
                             <header id="home" class="header">
-                                <div class="overlay"></div>
+<!--                                <div class="overlay"></div>-->
                                 <div class="header-content container">
                                     <h1 class="header-title">
                                         <span class="up text-nowrap">HELLO WORLD!</span>
-                                        <p class="header-subtitle">O Engenheiro de Software ideal para si</p>
                                     </h1>
+                                    <span class="header-subtitle text-white">O Engenheiro de Software ideal para si</span>
                                 </div>
                             </header>
                         </div>
