--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
 
     <section id="gtco-hero" class="gtco-cover"
-             style="background-image: url(images/header.jpg); background-size: cover !important;"
+             style="background-image: url(images/header.jpg); background-size: cover !important; height: 100vh;"
              data-section="home" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -86,12 +86,12 @@
                     <div class="display-t">
                         <div class="display-tc">
                             <header id="home" class="header">
-                                <div class="overlay"></div>
+<!--                                <div class="overlay"></div>-->
                                 <div class="header-content container">
                                     <h1 class="header-title">
                                         <span class="up text-nowrap">HELLO WORLD!</span>
-                                        <p class="header-subtitle">O Engenheiro de Software ideal para si</p>
                                     </h1>
+                                    <span class="header-subtitle text-white">O Engenheiro de Software ideal para si</span>
                                 </div>
                             </header>
                         </div>
@@ -119,12 +119,9 @@
                 <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                     <h2 class="heading-colored">Excelência &amp; Honestidade</h2>
                     <p>Com uma sólida formação acadêmica em Engenharia Informática e anos de experiência prática na
-                        área,
-                        Um profissional altamente qualificado e motivado. Minha paixão por resolver problemas complexos
-                        e por meio de
-                        soluções tecnológicos me torna um destaque no mundo da Engenharia. Com uma mente curiosa e um
-                        compromisso inabalável com a qualidade,
-                        sou a escolha certa para enfrentar desafios de engenharia de software com confiança e
+                        área, um profissional altamente qualificado e motivado. Minha paixão por resolver problemas complexos
+                        e por meio de soluções tecnológicas,torna-me um destaque no mundo da Engenharia. Com uma mente curiosa e um
+                        compromisso inabalável com a qualidade, sou a escolha certa para enfrentar desafios de engenharia de software com confiança e
                         excelência.</p>
                     <button class="btn-rounded btn btn-outline-primary mt-4" onclick="download_cv()">Baixar CV</button>
                 </div>
@@ -176,12 +173,6 @@
 
     <section id="gtco-our-team" class="portfolio_area" data-section="our-team" style="margin-top: 0; padding-top: 0">
         <div class="container" style="margin-top: 0; padding-top: 0">
-<!--            <div class="row row-pb-md">-->
-<!--                <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">-->
-<!--                    <h1>Projectos</h1>-->
-<!--                    <p class="sub"></p>-->
-<!--                </div>-->
-<!--            </div>-->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading text-left">
@@ -236,7 +227,7 @@
                 <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
                     <h1>Contacte - me</h1>
                     <p class="sub">Descubra um mundo de possibilidades. Estou apenas a um clique ou uma ligação de
-                        distância. Entre em contacto agora mesmo e descubra como posso te ajudar!</p>
+                        distância. Entre em contacto agora mesmo e descubra como posso ajudar-te!</p>
                 </div>
             </div>
             <div class="row">
