--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     <h1 class="header-title">
                                         <span class="up text-nowrap">HELLO WORLD!</span>
                                     </h1>
-                                    <span class="header-subtitle text-white">O Engenheiro de Software ideal para si</span>
+                                    <span class="header-subtitle text-white">O Engenheiro Informático ideal para si</span>
                                 </div>
                             </header>
                         </div>
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
                     <h1>Sobre Mim</h1>
-                    <p class="sub">Engenheiro de Software apaixonado por tecnologia e inovação!</p>
+                    <p class="sub">Engenheiro Informático apaixonado por tecnologia e inovação!</p>
                 </div>
             </div>
             <div class="row align-items-center">
